<resources>
    <string name="app_name">ValenParking</string>
    <!--main activity-->
    <string name="main_menu_time_string">Timer</string>
    <string name="main_menu_favourites_string">Favourites</string>
    <string name="main_menu_map_string">Map</string>
    <string name="main_menu_vehicle_string">Vehicle</string>
    <string name="main_menu_account_string">Account</string>

    <string name="google_key" translatable="false">AIzaSyB-oYhvyWk8pKQn34yEvKTIfPO49kTuXIM</string>
    <!--login/signUp/forgot activity-->
    <string name="login_email_string">Email</string>
    <string name="login_password_string">Password</string>
    <string name="login_confirm_password_string">Confirm Password</string>
    <string name="login_sign_in_string">Sign In</string>
    <string name="login_sign_up_string">Sign Up</string>
    <string name="login_reset_password_string">Reset my password</string>
    <string name="login_sign_in_google_string">Sign In with Google</string>
    <string name="login_forgot_password_string">I have forgotten my password</string>
    <string name="login_create_account_string">Create a new account</string>
    <string name="login_authentication_failed_string">Email or password is incorrect. Please, try again.</string>
    <string name="login_email_verified_string">Please, confirm email first.</string>
    <string name="login_complete_data_string">Please, confirm email first.</string>
    <string name="login_googleApiClient_failed_string">Connection failed.</string>
    <string name="login_with_email_passwd">Sign in with email and password</string>
    <string name="login_with_google_account">Sign in with Google account</string>
    <string name="signup_email_failed_string">An expected error occurred. Please, try again.</string>
    <string name="signup_email_sent_string">An email has been sent to you. Please, confirm before sign in.</string>
    <string name="signup_data_fill_failed_string">Please, make sure all the data is correct.</string>
    <string name="signup_email_error_string">Email is not valid</string>
    <string name="signup_password_error_string">Password should contain 1 lowercase, 1 uppercase, 1 number and 6 characters length at least</string>
    <string name="signup_confirmpass_error_string">Confirm password does not match with Password</string>
    <string name="forgot_email_string">An email has been sent to reset your password</string>
    <string name="forgot_email_failed_string">Please, make sure the email address is correct.</string>
    <string name="my_default_web_client_id" translatable="false">652442408718-ip4d1930e84ulpbcovjr1fppa96cqcq8.apps.googleusercontent.com</string>

    <!-- Favourites Fragment -->

    <string name="menu_clearFavourites">Delete favourites</string>
    <string name="favourite_dialog_delete_title">Delete favourites</string>
    <string name="favourite_dialog_option_cancel">CANCEL</string>
    <string name="favourite_dialog_option_ok">OK</string>
    <string name="favourite_dialog_delete_all">Do you want to delete the selected parkings?</string>
    <string name="empty_favourite_msg">No favourites to show</string>
    <string name="free_places">Free: </string>

    <!-- Map Fragment -->
    <string name="map_private_parking">Private</string>
    <string name="map_public_parking">Public</string>
    <string name="map_free_places">free places of</string>
    <string name="map_gps_disabled_sb_text">Enable Location to use this feature</string>
    <string name="map_gps_disable_sb_button_text">Close</string>
    <string name="map_no_location">Unable to get current location</string>
    <string name="map_searching_gps">Searching for GPS</string>

    <!--account fragment-->
    <string name="account_log_out_string">Log out</string>
    <string name="account_edit_profile_string">Edit your profile</string>
    <string name="account_content_description_string">User picture</string>
    <!--edit profile activity-->
    <string name="edit_profile_username_title_string">User name</string>
    <string name="edit_profile_useremail_title_string">Email</string>
    <string name="edit_profile_save_changes_string">Save changes</string>
    <string name="edit_profile_save_incorrect_string">No change has been made.</string>
    <string name="edit_profile_image_title_string">Profile picture</string>
    <string name="edit_profile_image_message_string">Do you want to change your profile picture?</string>
    <string name="edit_profile_gallery_not_take_photo_string">No image has been selected.</string>
    <string name="edit_profile_gallery_permission_denied_string">It is necessary to accept the permission of the storage access to take a picture.</string>
    <string name="edit_profile_save_correct_string">Changes have been applied.</string>


    <!-- Vehicle fragment -->
    <string name="vehicle_delete_button_string">Delete</string>
    <string name="vehicle_edit_text_string">Write a short description about your parking</string>
    <string name="vehicle_not_known_street_string">Unknown street</string>
    <string name="vehicle_cant_get_location_string">We can not get the location</string>
    <string name="vehicle_seat">Seat:</string>
    <string name="vehicle_floor">Floor:</string>
    <string name="vehicle_description">Description:</string>
    <string name="vehicle_location">Save  Location</string>
    <string name="vehicle_deleteLocation">Delete  Location</string>
    <string name="vehicle_myLocation">My Location:</string>
    <!-- common strings -->
    <string name="connection_failed_string">Connection failed</string>

    <!-- notification strings -->
    <string name="toast_notification_message"> A notification will be sent half and hour before.</string>
    <string name="notification_cancel" translatable="false">CANCEL</string>
    <string name="notification_advice">PARKING ADVICE</string>
    <string name="notification_text">The parking time will finish soon</string>
    <string name="notification_cancel_button">Cancel</string>

    <!-- Timer fragment -->
    <string name="planned_time_string">Planned time </string>
    <string name="save_time_string">Save time</string>
    <string name="delete_time_string">Delete time</string>
    <string name="invalid_time_string">Hora no válida</string>
    <string name="time_left_string">%1$d hours and %2$d minutes left</string>

</resources>
