<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBgApp"
    android:fillViewport="true"
    android:textStyle="bold"
    android:fontWeight="800">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">


        <EditText
            android:id="@+id/vehicleEditText"
            android:layout_width="296dp"
            android:layout_height="69dp"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/edit_text_rounded"
            android:ems="10"
            android:hint="@string/vehicle_edit_text_string"
            android:inputType="textMultiLine"
            android:padding="7dip"
            android:text=""
            android:textColor="@drawable/edit_text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/vehicleUbicaciónReal"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/vehicleMapButton"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toTopOf="@+id/vehicleSaveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_map" />

        <TextView
            android:id="@+id/vehicleStreetText"
            android:layout_width="229dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="56dp"
            android:background="@drawable/border"
            android:gravity="center"
            android:text="TextView"
            android:textSize="18sp"
            android:textStyle="bold | italic"
            app:layout_constraintBottom_toTopOf="@+id/vehicleSaveButton"
            app:layout_constraintEnd_toStartOf="@+id/vehicleMapButton"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/vehicleUbicaciónReal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="8dp"
            android:text="@string/vehicle_myLocation"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/vehicleStreetText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewPlanta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="40dp"
            android:text="@string/vehicle_floor"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewDescripcion"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewDescripcion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginBottom="12dp"
            android:text="@string/vehicle_description"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/vehicleEditText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textViewPlaza"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginBottom="40dp"
            android:text="@string/vehicle_seat"
            android:textSize="21sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewDescripcion"
            app:layout_constraintStart_toStartOf="@+id/guideline6" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <EditText
            android:id="@+id/editTextPlanta"
            android:layout_width="50dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/edit_text_rounded"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="2"
            android:textColor="@drawable/edit_text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewDescripcion"
            app:layout_constraintStart_toEndOf="@+id/textViewPlanta" />

        <EditText
            android:id="@+id/editTextPlaza"
            android:layout_width="50dp"
            android:layout_height="28dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/edit_text_rounded"
            android:ems="10"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="4"
            android:textColor="@drawable/edit_text_color"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewDescripcion"
            app:layout_constraintStart_toEndOf="@+id/textViewPlaza" />

        <Button
            android:id="@+id/vehicleDeleteButton"
            android:layout_width="164dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="56dp"
            android:background="@drawable/button_ripple_google"
            android:gravity="center"
            android:text="@string/vehicle_deleteLocation"
            android:textColor="@color/colorSecondaryText"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/vehicleSaveButton"
            android:layout_width="167dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="56dp"
            android:background="@drawable/button_ripple_bg"
            android:gravity="center"
            android:text="@string/vehicle_location"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>
</ScrollView>