<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorBgApp"
    android:fillViewport="true"
    tools:context=".EditProfileActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/edit_profile_userPicture"
            android:layout_width="149dp"
            android:layout_height="115dp"
            android:layout_marginBottom="48dp"
            android:contentDescription="@string/account_content_description_string"
            app:layout_constraintBottom_toTopOf="@+id/edit_profile_userName_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            tools:srcCompat="@tools:sample/avatars[0]" />

        <TextView
            android:id="@+id/edit_profile_userName_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginEnd="266dp"
            android:layout_marginRight="266dp"
            android:layout_marginBottom="12dp"
            android:text="@string/edit_profile_username_title_string"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_profile_userName_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_profile_userName_value"
            android:layout_width="283dp"
            android:layout_height="37dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/edit_text_rounded"
            android:inputType="text"
            android:paddingLeft="@dimen/login_edit_text_space"
            android:paddingRight="@dimen/login_edit_text_space"
            android:textColor="@color/colorSecondaryText"
            android:textSize="15sp"
            app:fontFamily="@font/acme"
            app:layout_constraintBottom_toTopOf="@+id/edit_profile_useEmail_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/edit_profile_useEmail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginEnd="312dp"
            android:layout_marginRight="312dp"
            android:layout_marginBottom="12dp"
            android:text="@string/edit_profile_useremail_title_string"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/edit_profile_userEmail_value"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_profile_userEmail_value"
            android:layout_width="283dp"
            android:layout_height="37dp"
            android:layout_marginStart="48dp"
            android:layout_marginLeft="48dp"
            android:layout_marginEnd="80dp"
            android:layout_marginRight="80dp"
            android:layout_marginBottom="64dp"
            android:background="@drawable/edit_text_rounded"
            android:inputType="text"
            android:paddingLeft="@dimen/login_edit_text_space"
            android:paddingRight="@dimen/login_edit_text_space"
            android:textColor="@color/colorSecondaryText"
            android:textSize="15sp"
            app:fontFamily="@font/acme"
            app:layout_constraintBottom_toTopOf="@+id/edit_profile_save_changes"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/edit_profile_save_changes"
            android:layout_width="173dp"
            android:layout_height="49dp"
            android:layout_marginBottom="80dp"
            android:background="@drawable/button_ripple_bg"
            android:text="@string/edit_profile_save_changes_string"
            android:textColor="@color/colorPrimaryText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageButton
            android:id="@+id/edit_profile_edit_button"
            android:layout_width="39dp"
            android:layout_height="37dp"
            android:layout_marginTop="76dp"
            android:layout_marginEnd="104dp"
            android:layout_marginRight="104dp"
            android:background="@color/colorBgApp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/edit_profile_userPicture"
            app:srcCompat="@drawable/ic_edit" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>